# seraph

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  a.py  docker-compose.yml  docker.env
docker/seraph_python/: Dockerfile
docker/seraph_python/structure/: main.py
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250818_000002_create_code_result_table.rs  m20250823_000003_add_missing_cascade_code_results.rs  main.rs
seraph_backend/: Cargo.toml
seraph_backend/src/: code_nodes.rs  code_result.rs  config.rs  enums.rs  lib.rs  server.rs  worker.rs
seraph_core/: Cargo.toml
seraph_core/src/: code_result.rs  config.rs  enums.rs  lib.rs
seraph_workers/: Cargo.toml
seraph_workers/src/: lib.rs
seraph_workers/src/code_nodes/: bin.rs  mod.rs
src/: config.rs  main.rs
